@@ -1,5 +1,8 @@
 Rend 0.x.x changelog:
+
+Accessibility & UX:
 * Sizes of all menu titles unified to Jumbo size
+* Added an option to scale HUD text
 
 Rend 0.2.0 changelog:
 
